# template-python-project

./: README.md  pyproject.toml
src/: base_pipeline.py  clients.py  interfaces.py  logger_factory.py  secrets.py
