[project]
name = "template-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MGilbert777", email = "mackenzie.gilbert@realist.ai" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
