[project]
name = "gcp-modular-template"
version = "0.1.0"
description = "Modular GCP Data Engineering Template"
readme = "README.md"
authors = [
    { name = "MGilbert777", email = "mackenzie.gilbert@realist.ai" }
]
requires-python = ">=3.13" # Match your .python-version
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.0.0",
    "google-cloud-storage",
    "google-cloud-bigquery",
    "google-cloud-pubsub",
    "google-cloud-secret-manager",
    "python-dotenv>=1.0.0", # Added for local/test env management
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"] # Match your build backend
build-backend = "uv_build"
